update: fix typos, adjust phrasing and plots

--- a/tex/sections/appendixB.tex
+++ b/tex/sections/appendixB.tex
@@ -1,6 +1,8 @@
 \chapter{Appendix B: Supplementary Material}
 \label{appendix:b}
 
+
+\section{Trials}
 \begin{table}[H]
 \centering
 \resizebox{\textwidth}{!}{%
